Wed Sep  7 17:31:31 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/BiDir_GIOP/BiDirGIOP.h:
        * tao/BiDir_GIOP/BiDirGIOP.cpp:
        * tao/BiDir_GIOP/BiDirPolicy_Validator.h:
        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
          export file is now generated by tao_idl

        * tao/BiDir_GIOP/bidirgiop_export.h:
          Removed this file.

Wed Sep  7 17:27:01 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/modules/IDLHelper.pm:
        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_global.cpp:
        * TAO_IDL/be/be_util.cpp:
        * TAO_IDL/be_include/be_global.h:
          Added skel_export_file and stub_export_file to define an explicit
          filename for these export files that are different than the stub/skel
          export_include which could be a full path. This fixes bugzilla 3980

Tue Sep  6 11:45:16 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Servant_Base.h:
          Fixed problem with versioned namespace support

Tue Sep  6 08:14:42 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/Any.h:
        * tao/AnyTypeCode/Any.cpp:
          Added support for std::wstring

Tue Sep  6 08:06:46 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/Basic_SArguments.h:
          Added support for std::wstring

Thu Sep  1 09:59:22 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.h:
        * tao/AnyTypeCode/AnyTypeCode_Adapter_Impl.cpp:
        * tao/AnyTypeCode_Adapter.h:
        * tao/Basic_Arguments.h:
          Added support for std::wstring

Thu Sep  1 06:31:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/PortableServer/BD_String_SArgument_T.cpp:
        * tao/PortableServer/Basic_SArgument_T.cpp:
        * tao/PortableServer/Fixed_Array_SArgument_T.cpp:
        * tao/PortableServer/Fixed_Size_SArgument_T.cpp: